--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require-dev": {
         "phpunit/phpunit": "8.5.*"
     },
-    "license": "GPL 3.0 or later",
+    "license": "GPL-3.0-or-later",
     "autoload": {
         "psr-4": {
             "Sunnydrake\\Serverip\\": "src/"
